46.2
====

- Fix fractional scaling beeing blury by setting GDK_DEBUG=gl-no-fractional as default
- Fix exposure times above 0.5 seconds not being displayed correctly in properties

46.1
====

- Fix fill-space option not being applied when changing the orientation in print preview
- Fix PNGs not being available when browsing images on SMB shares
- Don't animate switching between images with the mouse fwd/back buttons

46.0
====

- Change to stable dependencies

46.rc
=====

- Fix background color detection ignoring small lines in large images
- Change to "gl" as GSK default renderer instead of "ngl" due to performance reasons
- Change to sticking to the first error delivered during image loading

46.beta.2
=========

- Change metainfo to include GNOME group
- Change metainfo to use reversed name for the developer id
- Change to use latest glycin beta for better metadata performance

46.beta.1
=========

- Change .desktop file to not include "Slideshow" as keyword
- Change help by regenerating pages
- Change help to correctly represent zoom
- Change to use zbus 4.0

46.beta
=======

- Fix not reliably returning to restored image when undoing trash operation
- Added Shift+Delete as shortcut for permanent image deletion
- Added build option that makes X11 an optional dependency
- Added button to copy coordinates for location in properties
- Change to not using animation when changing images via keyboard shortcuts
- Change to opening image in new window, occupy 40% of the screen instead of 30%
- Change to using "stacked cards" animation when changing images via buttons
- Changed to show city if it's less than 15km away instead of 100km before

46.alpha
========

- Fix "Ctrl + C" copies image instead of metadata if text is selected
- Fix "g_object_weak_unref" warnings
- Fix changing image resets timeout for hiding controls if still visible
- Fix long file names can newly opened window larger than required for image